--- a/app/views/trucks/_form.html.erb
+++ b/app/views/trucks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: truck, local: true) do |form| %>
+<%= form_with(model: truck, local: true, :html => { multipart:true }) do |form| %>
   <% if truck.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(truck.errors.count, "error") %> prohibited this truck from being saved:</h2>
@@ -11,24 +11,29 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :name %>
     <%= form.text_field :name, id: :truck_name, class: "form-control"%>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :address %>
     <%= form.text_field :address, id: :truck_address, class: "form-control"%>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :phone %>
     <%= form.text_field :phone, id: :truck_phone, class: "form-control"%>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :website %>
     <%= form.text_field :website, id: :truck_website, class: "form-control"%>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :image %>
+    <%= form.text_field :remote_image_url, multiple: true, class: "form-control"%>
   </div>
 
   <div class="actions">
