--- a/app/views/trucks/_form.html.erb
+++ b/app/views/trucks/_form.html.erb
@@ -33,7 +33,7 @@
 
   <div class="form-group">
     <%= form.label :image %>
-    <%= form.text_field :remote_image_url, multiple: true, class: "form-control"%>
+    <%= form.file_field :image,  class: "form-control"%>
   </div>
 
   <div class="actions">
