--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,22 +1,27 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">What the Foodtruck</a>
+	<%= link_to "What the Foodtruck", root_path, class: "navbar-brand" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	<ul class="navbar-nav mr-auto">
-	  <li class="nav-item active">
-		<a class="nav-link"href="/pages/about">About</a>
-	  </li>
-	  <li class="nav-item">
-		<a class="nav-link" href="/pages/contact">Contact</a>
-	  </li>
+		<li><%= link_to "About", pages_about_path, class: "nav-item nav-link"%></li>
+		<%= link_to "Contact", pages_contact_path, class: "nav-item nav-link"%>
 	</ul>
 	<form class="form-inline my-2 my-lg-0">
 	  <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
 	  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 	</form>
+	<ul class="navbar-nav navbar-right">
+		<% if !user_signed_in? %>
+			<%= link_to "Sign up", new_user_registration_path, class: "nav-item nav-link" %>
+			<%= link_to "Sign in", new_user_session_path, class: "nav-item nav-link" %>
+		<% else %>
+			<%= link_to "Sign out", destroy_user_session_path, class: "nav-item nav-link", method: :delete %>
+			<%= link_to "Edit Profile", edit_user_registration_path, class: "nav-item nav-link" %>
+		<% end %>
+	</ul>
   </div>
 </nav>
 
