Set up routing links for reviews

--- a/app/views/trucks/show.html.erb
+++ b/app/views/trucks/show.html.erb
@@ -19,5 +19,7 @@
   <%= @truck.website %>
 </p>
 
+<%= link_to "Write a Review", new_truck_review_path(@truck), class: "btn btn-primary" %>
+
 <%= link_to 'Edit', edit_truck_path(@truck), class: "btn btn-link" %> |
 <%= link_to 'Back', trucks_path, class: "btn btn-link" %>
