--- a/app/views/trucks/show.html.erb
+++ b/app/views/trucks/show.html.erb
@@ -29,7 +29,7 @@
 					<h3>No reviews yet. Be the first to write one!</h3>
 				<% else %>
 				<% @reviews.each do |review| %>
-					<p><%= review.rating %></p>
+					<div class="star-rating" data-score= <%= review.rating %> ></div>
 					<p><%= review.comment %></p>
 				<% end %>
 				<% end %>
@@ -38,3 +38,15 @@
 
 <%= link_to 'Edit', edit_truck_path(@truck), class: "btn btn-link" %> |
 <%= link_to 'Back', trucks_path, class: "btn btn-link" %>
+
+<script>
+	$( document ).ready(function() {
+	$('.star-rating').raty({
+			path: '/assets',
+			readOnly: true,
+			score: function() {
+				return $(this).attr('data-score');
+			}
+	});
+});
+</script>
