--- a/app/views/trucks/show.html.erb
+++ b/app/views/trucks/show.html.erb
@@ -1,10 +1,12 @@
 <div class="row">
 	<div class="col-md-3">
 				<%= image_tag @truck.image_url %>
-				<p>
-					<strong>Name:</strong>
+				<h2>
 					<%= @truck.name %>
-				</p>
+				</h2>
+				
+				<div class="star-rating" data-score= <%= @avg_rating %> ></div>
+				<p><%= "#{@reviews.length} reviews" %></p>
 
 				<p>
 					<strong>Address:</strong>
@@ -28,10 +30,18 @@
 				<% if @reviews.blank? %>
 					<h3>No reviews yet. Be the first to write one!</h3>
 				<% else %>
-				<% @reviews.each do |review| %>
-					<div class="star-rating" data-score= <%= review.rating %> ></div>
-					<p><%= review.comment %></p>
-				<% end %>
+					<table class="table">
+						<tbody>
+							<% @reviews.each do |review| %>
+								<tr>
+									<td>
+										<div class="star-rating" data-score= <%= review.rating %> ></div>
+										<p><%= h(review.comment).gsub(/\n/, '<br/>').html_safe %></p>
+									</td>
+								</tr>
+							<% end %>
+						</tbody>
+					</table>
 				<% end %>
 	</div>
 </div>
